--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^6.15.0",
     "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
+    "pdf2pic": "^3.2.0",
     "sharp": "^0.34.5",
     "stream": "^0.0.3",
     "uuid": "^9.0.0"
